# Virtual-mirror

./: .gitattributes  README.md
Node1/: .gitattributes  Dockerfile  ReadMe.txt  env_config.json  parallel_process.sh  run_docker.sh  run_web_app.sh  run_web_app_build.sh  start_application.sh
Node1/2D-Human-Parsing/demo_imgs/: img_list.txt
Node1/2D-Human-Parsing/inference/: inference_acc.py  inference_acc[backup].py
Node1/GVirtuS/: Makefile
Node1/GVirtuS/demo/cudart/: add_grid.e  (+1 more)
Node1/RDMA_functions/: RDMA Tutorial.docx  messages.h  rdma_client  rdma_client.c  rdma_server  rdma_server.c
Node1/certs/: ca.crt  ca.key  ca.srl  mirror.crt  mirror.csr  mirror.key  server-openssl.cnf
Node1/rdma-container/: Dockerfile  example.py  rdma.hpp
Node1/rdma-container/subprojects/: .gitignore  doka.wrap
Node1/shared-data/web_src/: config.json
Node1/web_app/: app.py  app_backend.py  backend-key.pem  live.py
Node1/web_app/backup/: backend-cert.pem
Node1/web_app/viton/: cert.pem  key.pem  package-lock.json  package.json  vite.config.js
Node2/: Dockerfile_Node2  Dockerfile_VITON  env_config.json  run_only_viton.sh
Node2/VITON-HD/: datasets.py  networks.py  test.py
Node2/rdma-container/: README.md  example.cpp  meson.build  pybind11_module.cpp  rdma.cpp
Node2/shared-data/: test_pairs.txt
Node2/shared-data-tmp/0b3d052e-09a3-4ec8-a1a7-e41091f3c662/: img_list.txt
Node2/shared-data/img_path/: img_list.txt
Node2/shared-data/openpose_json/: sample1_keypoints.json  sample2_keypoints.json
Node2/shared-data/web_src/: config.json
Node2/web_app/: app_backend.py
(+29 files in other folders)
